# ImageTUI-cpp

./: .gitignore  CMakeLists.txt
include/core/: image_processor.h
include/filters/: artistic.h  basic.h
scripts/: build.sh  run.sh
src/: main.cpp
src/core/: image_processor.cpp
src/filters/: artistic.cpp  basic.cpp
